# django-choicesfields

./: .gitignore  pyproject.toml  pytest.ini
choicesfields/: __init__.py
tests/: test_choicesfields.py
tests/test_app/: constants.py  models.py  settings.py
tests/test_app/migrations/: 0001_initial.py
